# WFCpp

./: .gitignore  .gitmodules  CMakeLists.txt  LoC.md  README.md  Tutorial.md  out
demo/: CMakeLists.txt  demo.cpp
test/: CMakeLists.txt
test/coverage/: gcov.css  index-sort-f.html  index-sort-l.html  index.html
test/coverage/home/elaine/cpp/WFCpp/test/src/: index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
test/coverage/include/: Grid.h.func-sort-c.html  Grid.h.func.html  Grid.h.gcov.html  Position.h.func-sort-c.html  Position.h.func.html  Position.h.gcov.html  Solver.h.func-sort-c.html  Solver.h.func.html  Solver.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
test/coverage/lib/EasyBMP/: EasyBMP.cpp.func-sort-c.html  EasyBMP.cpp.func.html  EasyBMP.cpp.gcov.html  EasyBMP_DataStructures.h.func-sort-c.html  EasyBMP_DataStructures.h.func.html  EasyBMP_DataStructures.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
test/coverage/lib/lodepng/: lodepng.cpp.gcov.html
test/coverage/src/: Extractor.cpp.func-sort-c.html  Extractor.cpp.func.html  Extractor.cpp.gcov.html  Solver.cpp.func-sort-c.html  Solver.cpp.func.html  Solver.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
test/src/: BMPImageTester.cpp  ExtractorTester.cpp  SolverTester.cpp  SynthesizerTester.cpp  Test.h  main.cpp
